# reverse_internet

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: http.rs  inside.rs  lib.rs  main.rs  outside.rs
