[package]
name = "reverse_internet"
version = "0.1.0"
edition = "2021"
description = "反向代理上网工具"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
tokio = { version = "1.15.0", features = ["full"] }
socks5-proxy = { git = "https://github.com/rqyuan/socks5-proxy" }
